CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)
PROJECT(DEMO3)
AUX_SOURCE_DIRECTORY(. DIR_SOURS)
message(STATUS "${PROJECT_SOURCE_DIR}")
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/math)
INCLUDE_DIRECTORIES(${PROJECT_SORUCE_DIR})
SET(Demo_VERSION_MAJOR 1)
SET(Demo_VERSION_MINOR 3)
message(STATUS "${PROJECT_SOURCE_DIR}/config.h.in")
CONFIGURE_FILE (
	"${PROJECT_SOURCE_DIR}/config.h.in" 
	"${PROJECT_SOURCE_DIR}/config.h"
)
#configure_file (
#  "${PROJECT_SOURCE_DIR}/config.h.in"
#  "${PROJECT_BINARY_DIR}/config.h"
#  )
set (EXTRA_LIBS MathFunctions)
set (CMAKE_BUILD_TYPE "Debug")
#set (cmake_cxx_flags_debug "-g")
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/math)
ADD_EXECUTABLE(main ${DIR_SOURS})
TARGET_LINK_LIBRARIES(main ${EXTRA_LIBS})
